// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toBeFinite > fails when given a finite number 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeFinite()[22m

Expected value to not be finite received:
  [31m1[39m"
`;

exports[`.toBeFinite > fails when not given Infinity 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeFinite()[22m

Expected value to be finite received:
  [31mInfinity[39m"
`;

exports[`.toBeFinite > fails when not given NaN 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeFinite()[22m

Expected value to be finite received:
  [31mNaN[39m"
`;
